article.option周りを変更
